# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = infraspec
description = Infra CI test library for python
project_urls =
    CI: Travis = https://travis-ci.org/ssato/python-infraspec
    Bug Tracker = https://github.com/ssato/python-infraspec/issues
    Source = https://github.com/ssato/python-infraspec
long_description =
    Infra CI test library for python

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-infraspec
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[tool:pytest]
testpaths =
    tests
    src

python_files = *.py
addopts = --doctest-modules
mock_use_standalone_module = true

# vim:sw=4:ts=4:et:
